Исправил замечания, убрал коллективную безответственность с валидацией в хэндлерах